--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-jwt": "^1.2.0"
+    "react-jwt": "^1.2.0",
+    "react-redux": "^8.1.2",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.15.0",
+    "sweetalert2": "^11.7.22"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
